
Version 1.0ea12 - 

- improved debugger UI with detachable panels
- improved speed when checking grammar (delay creation of error paths when the user clicks on a rule)
- prefs: can specify now ANTLR 3 classpath
- handle NonRegularDecisionMessage errors
- rules are sorted in the debugger input dialog
- do not analyze the grammar when debugging remotely
- mark the grammar as dirty if the file is modified outside ANTLRWorks
- resize view when graphic elements are moved (DFA decision, etc)
- fixed a bug that would prevent small error paths from being displayed in the syntax diagram
- fixed a bug where performing some menu commands would failed on Windows/Linux (mostly cut and paste)
- fixed a bug where dialogs would not be displayed in the same screen as the parent frame
  in multi-screen environment
- fixed a bug that would prevent decision DFA to be displayed if the first token of a rule was
  not in the same line as the colon
- fixed a bug where a path with white space in it could make the compilation failed

Version 1.0ea11 - 07/05/06

- includes ANTLR 3.0b2

Version 1.0ea10 - 06/28/06

- includes ANTLR 3.0b1
- fixed null pointer exception when display a syntax diagram

Version 1.0ea9 - 06/02/06

- debugger: display now AST tree during debugging
- debugger: can debug tree grammar (display input tree)
- debugger: can step over a rule
- parse tree in debugger shows backtrack nodes (colorized)
- show now Tokens DFA
- can now export decision DFA and rule dependency graph as DOT file
- new replace all feature in find dialog
- generated code coloring has been disabled
- auto-save document before debugging and generating code for display
- generate parser if document has been modified since last generation
- more precise message when log are reported to the console (warnings or errors)
- more information are reported in the events list of the debugger
- debugger: output pane and information pane are now hidden by default