@@ -65,6 +65,7 @@ public class DBEventsPanel extends DetachablePanel {
 
         JScrollPane infoScrollPane = new JScrollPane(infoTable);
         infoScrollPane.setWheelScrollingEnabled(true);
+        infoTable.getParent().setBackground(Color.white);
 
         mainPanel.add(infoScrollPane, BorderLayout.CENTER);
     }
